<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.drive.app.activities.RegisterActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/WhiteTextLabel">

            <EditText
                android:id="@+id/register_etxt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_name"
                android:textColor="@android:color/white"
                android:theme="@style/WhiteEditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_username"
            android:layout_centerHorizontal="true"
            android:theme="@style/WhiteTextLabel">

            <EditText
                android:id="@+id/register_etxt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_name"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:theme="@style/WhiteEditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_password"
            android:layout_centerHorizontal="true"
            android:theme="@style/WhiteTextLabel">

            <EditText
                android:id="@+id/register_etxt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:theme="@style/WhiteEditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_mail"
            android:layout_centerHorizontal="true"
            android:theme="@style/WhiteTextLabel">

            <EditText
                android:id="@+id/register_etxt_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_etxt_email"
                android:ems="10"
                android:hint="@string/location"
                android:textColor="@android:color/white"
                android:theme="@style/WhiteEditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_vehicle_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_location"
            android:layout_centerHorizontal="true"
            android:theme="@style/WhiteTextLabel">

            <EditText
                android:id="@+id/register_etxt_vehicle_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_etxt_location"
                android:ems="10"
                android:hint="@string/vehicle_make"
                android:textColor="@android:color/white"
                android:theme="@style/WhiteEditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_vehicle_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_vehicle_make"
            android:layout_centerHorizontal="true"
            android:theme="@style/WhiteTextLabel">

            <EditText
                android:id="@+id/register_etxt_vehicle_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_etxt_vehicle_make"
                android:ems="10"
                android:hint="@string/vehicle_model"
                android:textColor="@android:color/white"
                android:theme="@style/WhiteEditTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_vehicle_model"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@drawable/login_button_shape"
            android:ems="10"
            android:text="@string/register"
            android:textColor="@android:color/white" />

    </RelativeLayout>


</RelativeLayout>
